# fastapi-poetry-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
src/: main.py
tests/: test_main.py
