# pyproject.toml

[tool.poetry]
name = "fastapi-poetry-docker"
version = "0.1.0"
description = "A FastAPI app with Poetry and Docker"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies] # NEW: Define a development dependency group
pytest = "^8.2.0" # Use the latest stable version
httpx = "^0.27.0" # Use the latest stable version
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"